Bug 1240285 - Forward focus only if label is not focusable r=edgar

Focus should remain on the label rather than forwarded to the labeled
element.

Co-Authored-By: Mu-An Chiou <me@muanchiou.com>

Differential Revision: https://phabricator.services.mozilla.com/D67676